tests/neg-custom-args/fatal-warnings/i2673b.scala
package Foos

class Bar // error
object bar
